--- a/index.html
+++ b/index.html
@@ -15,38 +15,44 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--HEADER-->
 
-    <header class="header">
+    <header class="page-header">
       <div class="container">
         <nav class="nav">
-          <a class="head-logo" href="./index.html"> <span>Web</span>Studio</a>
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a class="nav-link active" href="./index.html">Студия</a>
+          <a class="logo logo--black" href="./index.html">
+            <span class="logo__text">Web</span>Studio</a
+          >
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link nav__link--active" href="./index.html"
+                >Студия</a
+              >
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html">Портфолио</a>
+            <li class="nav__item">
+              <a class="nav__link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
 
-        <ul class="contacts list">
-          <li class="contact-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./img/sprite.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
-            <a class="contacts-link" href="tel:+380961111111">
-              <svg class="contact-icon smartphone" width="10" height="16">
+          <li class="contacts__item">
+            <a class="contacts__link" href="tel:+380961111111">
+              <svg class="contacts__icon smartphone" width="10" height="16">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
