--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--HEADER-->
 
     <header class="page-header">
-      <div class="container">
+      <div class="container container--nav">
         <nav class="nav">
           <a class="logo logo--black" href="./index.html">
             <span class="logo__text">Web</span>Studio</a
@@ -129,41 +129,41 @@
         </div>
       </section>
       <!-- What we do SECTION-->
-      <section>
-        <div class="do container">
+      <section class="we-do">
+        <div class="container">
           <h2 class="sections-title">Чем мы занимаемся</h2>
-          <ul class="do-list list">
-            <li class="do-item">
-              <div class="do-thumb">
+          <ul class="we-do__list">
+            <li class="we-do__item">
+              <div class="we-do__thumb">
                 <img
                   class="no-gap"
                   src="./img/what-we-do/what-we-do-1.jpg"
                   alt="Планшет с клавиатурой"
                   width="370"
                 />
-                <h3 class="do-text">Десктопные приложения</h3>
+                <h3 class="we-do__text">Десктопные приложения</h3>
               </div>
             </li>
-            <li class="do-item">
-              <div class="do-thumb">
+            <li class="we-do__item">
+              <div class="we-do__thumb">
                 <img
                   class="no-gap"
                   src="./img/what-we-do/what-we-do-2.jpg"
                   alt="Ноутбук и телефон"
                   width="370"
                 />
-                <h3 class="do-text">Мобильные приложения</h3>
+                <h3 class="we-do__text">Мобильные приложения</h3>
               </div>
             </li>
-            <li class="do-item">
-              <div class="do-thumb">
+            <li class="we-do__item">
+              <div class="we-do__thumb">
                 <img
                   class="no-gap"
                   src="./img/what-we-do/what-we-do-3.jpg"
                   alt="Планшет"
                   width="370"
                 />
-                <h3 class="do-text">Дизайнерские решения</h3>
+                <h3 class="we-do__text">Дизайнерские решения</h3>
               </div>
             </li>
           </ul>
@@ -171,44 +171,44 @@
       </section>
       <!-- Our team SECTION-->
       <section class="team">
-        <div class="team container">
+        <div class="container">
           <h2 class="sections-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="team-item">
+          <ul class="team__list">
+            <li class="team__item">
               <img
                 class="no-gap"
                 src="./img/our-team/Ihor.jpg"
                 alt="Фото Игоря"
                 width="270"
               />
-              <div class="team-card">
-                <h3 class="team-title">Игорь Демьяненко</h3>
-                <p class="team-text">Product Designer</p>
-                <ul class="teamate-networks list">
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+              <div class="teamate-card">
+                <h3 class="teamate-card__title">Игорь Демьяненко</h3>
+                <p class="teamate-card__text">Product Designer</p>
+                <ul class="network__list">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="tnetwork__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -216,41 +216,41 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
                 class="no-gap"
                 src="./img/our-team/Olga.jpg"
                 alt="Фото Ольги"
                 width="270"
               />
-              <div class="team-card">
-                <h3 class="team-title">Ольга Репина</h3>
-                <p class="team-text">Frontend Developer</p>
-                <ul class="teamate-networks list">
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+              <div class="teamate-card">
+                <h3 class="teamate-card__title">Ольга Репина</h3>
+                <p class="teamate-card__text">Frontend Developer</p>
+                <ul class="network__list">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -258,41 +258,41 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
                 class="no-gap"
                 src="./img/our-team/Nikolay.jpg"
                 alt="Фото Николая"
                 width="270"
               />
-              <div class="team-card">
-                <h3 class="team-title">Николай Тарасов</h3>
-                <p class="team-text">Marketing</p>
-                <ul class="teamate-networks list">
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+              <div class="teamate-card">
+                <h3 class="teamate-card__title">Николай Тарасов</h3>
+                <p class="teamate-card__text">Marketing</p>
+                <ul class="network__list">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -300,41 +300,41 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
                 class="no-gap"
                 src="./img/our-team/Mihail.jpg"
                 alt="Фото Михаила"
                 width="270"
               />
-              <div class="team-card">
-                <h3 class="team-title">Михаил Ермаков</h3>
-                <p class="team-text">UI Designer</p>
-                <ul class="teamate-networks list">
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+              <div class="teamate-card">
+                <h3 class="teamate-card__title">Михаил Ермаков</h3>
+                <p class="teamate-card__text">UI Designer</p>
+                <ul class="network__list">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="teamate-network-item">
-                    <a class="teamate-network-link" href="">
-                      <svg class="network-icon" width="20" height="20">
+                  <li class="network__item">
+                    <a class="network__link" href="">
+                      <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -346,48 +346,48 @@
         </div>
       </section>
       <!--OUR CLIENTS SECTION-->
-      <section>
-        <div class="our-clients container">
+      <section class="clients">
+        <div class="container">
           <h2 class="sections-title">Постоянные клиенты</h2>
-          <ul class="clients-list list">
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="44.27" height="49.23">
+          <ul class="clients__list">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="44.27" height="49.23">
                   <use href="./img/sprite.svg#icon-company-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="40" height="52">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="40" height="52">
                   <use href="./img/sprite.svg#icon-company-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="41" height="42.6">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="41" height="42.6">
                   <use href="./img/sprite.svg#icon-company-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="79.66" height="42.02">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="79.66" height="42.02">
                   <use href="./img/sprite.svg#icon-company-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="59" height="47">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="59" height="47">
                   <use href="./img/sprite.svg#icon-company-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a class="clinets-link" href="#">
-                <svg class="clients-icon" width="88.48" height="45.44">
+            <li class="clients__item">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon" width="88.48" height="45.44">
                   <use href="./img/sprite.svg#icon-company-6"></use>
                 </svg>
               </a>
@@ -426,28 +426,28 @@
           <ul class="social-networks list">
             <li class="network-item list-item">
               <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item list-item">
               <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item list-item">
               <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="network-item list-item">
               <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
