Футер по БЭМ И  СААС

--- a/index.html
+++ b/index.html
@@ -186,28 +186,28 @@
                 <p class="teamate-card__text">Product Designer</p>
                 <ul class="network__list">
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="tnetwork__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -228,28 +228,28 @@
                 <p class="teamate-card__text">Frontend Developer</p>
                 <ul class="network__list">
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -270,28 +270,28 @@
                 <p class="teamate-card__text">Marketing</p>
                 <ul class="network__list">
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -312,28 +312,28 @@
                 <p class="teamate-card__text">UI Designer</p>
                 <ul class="network__list">
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="network__item">
-                    <a class="network__link" href="">
+                    <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -398,55 +398,53 @@
     </main>
     <!-- FOOTER-->
     <footer class="footer">
-      <div class="footer container">
+      <div class="container container--footer">
         <div class="address-container">
-          <a class="footer-logo link" href="./index.html"
-            ><span>Web</span>Studio</a
+          <a class="logo logo--white" href="./index.html"
+            ><span class="logo__text">Web</span>Studio</a
           >
           <address class="address">
-            <span class="address-item text">
-              г. Киев, пр-т Леси Украинки, 26</span
-            >
-            <ul class="list">
-              <li class="address-item">
-                <a class="address-link" href="mailto:info@example.com"
+            <span class="address__text"> г. Киев, пр-т Леси Украинки, 26</span>
+            <ul class="address__list">
+              <li class="address__item">
+                <a class="address__link" href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
-              <li class="address-item">
-                <a class="address-link" href="tel:+380991111111"
+              <li class="address__item">
+                <a class="address__link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-links">
-          <p class="social-text">присоединяйтесь</p>
-          <ul class="social-networks list">
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
+        <div class="network">
+          <p class="network__text">присоединяйтесь</p>
+          <ul class="network__list network__list--footer">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
                 <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
                 <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
                 <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
                 <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -454,20 +452,20 @@
             </li>
           </ul>
         </div>
-        <div class="mailing-container">
-          <p class="mailing-text">Подпишитесь на рассылку</p>
-          <form class="mailing-form">
-            <label class="mailing-label">
+        <div class="subscribe">
+          <p class="subscribe__text">Подпишитесь на рассылку</p>
+          <form class="subscribe__form">
+            <label class="subscribe__label">
               <input
-                class="mailing-input"
+                class="subscribe__input"
                 type="email"
                 name="email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-btn" type="submit">
+            <button class="subscribe__btn" type="submit">
               Подписаться
-              <svg class="send-icon" width="24" height="24">
+              <svg class="subscribe__icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-send"></use>
               </svg>
             </button>
