--- a/index.html
+++ b/index.html
@@ -477,68 +477,87 @@
     <!-- BACKDROP -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
-        <form class="modal-form">
-          <label for="username" class="modal-label"> Имя </label>
-          <div class="input-wraper">
+        <p class="modal__text">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="callback-form">
+          <label for="username" class="callback-form__label"> Имя </label>
+          <div class="callback-form__wraper">
             <input
               type="text"
               name="username"
               id="username"
-              class="modal-input"
+              class="callback-form__input"
             />
-            <svg class="input-icon" width="18" height="18">
+            <svg class="callback-form__icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-person"></use>
             </svg>
           </div>
 
-          <label for="tel" class="modal-label"> Телефон </label>
+          <label for="tel" class="callback-form__label"> Телефон </label>
 
-          <div class="input-wraper">
-            <input type="tel" name="tel" id="tel" class="modal-input" />
-            <svg class="input-icon" width="18" height="18">
+          <div class="callback-form__wraper">
+            <input
+              type="tel"
+              name="tel"
+              id="tel"
+              class="callback-form__input"
+            />
+            <svg class="callback-form__icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-phone"></use>
             </svg>
           </div>
 
-          <label for="email" class="modal-label"> Почта </label>
-          <div class="input-wraper">
-            <input type="email" name="email" id="email" class="modal-input" />
-            <svg class="input-icon" width="18" height="18">
+          <label for="email" class="callback-form__label"> Почта </label>
+          <div class="callback-form__wraper">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="callback-form__input"
+            />
+            <svg class="callback-form__icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-email"></use>
             </svg>
           </div>
 
-          <label class="modal-label">
+          <label class="callback-form__label">
             Комментарий
             <textarea
               name="feedback"
               rows="10"
               placeholder="Введите текст"
-              class="modal-input feedback"
+              class="callback-form__input callback-form__input--feedback"
             ></textarea>
           </label>
         </form>
+
         <form class="checkbox">
-          <label class="checkbox-label">
-            <input class="chekbox-input" type="checkbox" />
-            <span class="checkbox-text"
+          <label class="checkbox__label">
+            <input class="checkbox__input" type="checkbox" />
+            <span class="checkbox__text"
               >Соглашаюсь с рассылкой и принимаю
-              <a class="checkbox-link" href="#">Условия договора</a>
+              <a class="checkbox__link" href="#">Условия договора</a>
             </span>
-            <svg class="check-icon" width="16" height="15">
+            <svg
+              class="checkbox__icon checkbox__icon--check"
+              width="16"
+              height="15"
+            >
               <use href="./img/sprite.svg#icon-check"></use>
             </svg>
-            <svg class="uncheck-icon" width="16" height="15">
+            <svg
+              class="checkbox__icon checkbox__icon--uncheck"
+              width="16"
+              height="15"
+            >
               <use href="./img/sprite.svg#icon-uncheck"></use>
             </svg>
           </label>
         </form>
 
-        <button class="modal-btn" type="submit">Отправить</button>
+        <button class="submit-button" type="submit">Отправить</button>
 
-        <button class="close-btn" data-modal-close>
-          <svg class="close-icon" width="18" height="18">
+        <button class="close-button" data-modal-close>
+          <svg class="close-button__icon" width="18" height="18">
             <use href="./img/sprite.svg#icon-close"></use>
           </svg>
         </button>
