исправляет лого хеддер и футтер

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="page-header">
       <div class="container container--nav">
         <nav class="nav">
-          <a class="logo logo--black" href="./index.html">
+          <a class="logo logo--header" href="./index.html">
             <span class="logo__text">Web</span>Studio</a
           >
           <ul class="nav__list">
@@ -199,7 +199,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="tnetwork__item">
+                  <li class="network__item">
                     <a class="network__link network__link--grey" href="">
                       <svg class="network__icon" width="20" height="20">
                         <use href="./img/sprite.svg#icon-facebook"></use>
@@ -400,7 +400,7 @@
     <footer class="footer">
       <div class="container container--footer">
         <div class="address-container">
-          <a class="logo logo--white" href="./index.html"
+          <a class="logo logo--footer" href="./index.html"
             ><span class="logo__text">Web</span>Studio</a
           >
           <address class="address">
