--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <header class="page-header">
       <div class="container container--nav">
         <nav class="nav">
-          <a class="logo logo--black" href="./index.html">
+          <a class="logo logo--header" href="./index.html">
             <span class="logo__text">Web</span>Studio</a
           >
           <ul class="nav__list">
@@ -311,7 +311,7 @@
     <footer class="footer">
       <div class="container container--footer">
         <div class="address-container">
-          <a class="logo logo--white" href="./index.html"
+          <a class="logo logo--footer" href="./index.html"
             ><span class="logo__text">Web</span>Studio</a
           >
           <address class="address">
